--- a/src/components/source-reference/source-reference.component.scss
+++ b/src/components/source-reference/source-reference.component.scss
@@ -1,6 +1,7 @@
 @import "../../styles/variables.scss";
 
 .source-reference {
+    font-size: 12px;
     padding-left: 2px;
     a:hover, a:active, a:focus {
         text-decoration: none;
