--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,17 +24,17 @@
       </small>
     </h1>
     <div class="text-muted npc-subline">
-      <span class="race">{{character.race.name}}</span>,
+      <span class="gender">{{character.genderDescription}}</span>
+      <span class="race">{{character.race.name}}</span>
       <source-reference [reference]="character.race.reference"></source-reference>
       <span class="sub-race" *ngIf="character.subrace">{{character.subrace.name}}<source-reference [reference]="character.subrace.reference"></source-reference></span>,
       <span class="size">{{character.race.size}}</span>,
       <span class="npc-alignment">{{character.alignmentDescription}}</span>
     </div>
     <div class="text-muted npc-subline">
-      <span class="gender">{{character.genderDescription}}</span>,
-      <span class="height">{{character.heightString || 0}}</span>,
-      <span class="weight">{{(character.weight || 0) + " lbs."}}</span>,
-      <span class="weight">{{(character.age || 0) + " years old"}}</span>
+      <span class="height">{{character.heightString || 0}} <span class="font-weight-bold">({{heightDescriptor.describe(character)}})</span></span>,
+      <span class="weight">{{(character.weight || 0) + " lbs."}} <span class="font-weight-bold">({{weightDescriptor.describe(character)}})</span></span>,
+      <span class="weight">{{(character.age || 0) + " years old"}} <span class="font-weight-bold">({{ageDescriptor.describe(character)}})</span></span>
     </div>
   </div>
   <div class="character-block-first">
