--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,83 +15,9 @@
   </div>
 </div>
 <div class="container">
-  <div class="npc-header">
-    <h1 class="npc-name">
-      John Smith
-      <small class="text-muted">
-        {{character.class.name}}<source-reference [reference]="character.class.reference"></source-reference>
-        <span *ngIf="character.classArchetype">({{character.classArchetype.name}}<source-reference [reference]="character.classArchetype.reference"></source-reference>)</span>
-      </small>
-    </h1>
-    <div class="text-muted npc-subline">
-      <span class="gender">{{character.genderDescription}}</span>
-      <span class="race">{{character.race.name}}</span>
-      <source-reference [reference]="character.race.reference"></source-reference>
-      <span class="sub-race" *ngIf="character.subrace">{{character.subrace.name}}<source-reference [reference]="character.subrace.reference"></source-reference></span>,
-      <span class="size">{{character.race.size}}</span>,
-      <span class="npc-alignment">{{character.alignmentDescription}}</span>
-    </div>
-    <div class="text-muted npc-subline">
-      <span class="height">{{character.heightString || 0}} <span class="font-weight-bold">({{heightDescriptor.describe(character)}})</span></span>,
-      <span class="weight">{{(character.weight || 0) + " lbs."}} <span class="font-weight-bold">({{weightDescriptor.describe(character)}})</span></span>,
-      <span class="weight">{{(character.age || 0) + " years old"}} <span class="font-weight-bold">({{ageDescriptor.describe(character)}})</span></span>
-    </div>
-  </div>
-  <div class="character-block-first">
-    <h2 class="character-block-title">{{character.background.name}}<source-reference [reference]="character.background.reference"></source-reference></h2>
-    <div class="feature">
-      <h3 class="feature-name">Trait.</h3><span class="feature-description">{{character.personalityTrait}}</span>
-    </div>
-    <div class="feature">
-      <h3 class="feature-name">Ideal.</h3><span class="feature-description">{{character.ideal}}</span>
-    </div>
-    <div class="feature">
-      <h3 class="feature-name">Bond.</h3><span class="feature-description">{{character.bond}}</span>
-    </div>
-    <div class="feature">
-      <h3 class="feature-name">Flaw.</h3><span class="feature-description">{{character.flaw}}</span>
-    </div>
-  </div>
+  <header-display [character]="character"></header-display>
+  <background-display [character]="character"></background-display>
   <ability-score-list [character]="character"></ability-score-list>
-  <div class="character-block-minor">
-    <div class="row">
-      <div class="col-md-3 col-sm-6">
-        <div class="attribute-block">
-          <div class="attribute-title">Level</div>
-          <span class="primary">{{character.level.number}}</span>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <div class="attribute-block">
-          <div class="attribute-title">Armor Class</div>
-          <span class="primary">{{character.armorClass}}</span>
-          <span class="secondary">({{character.equippedArmor}})</span>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <div class="attribute-block">
-          <div class="attribute-title">Hit Points</div>
-          <span class="primary">{{character.hitPoints}}</span>
-          <span class="secondary">({{character.hitPointFormula}})</span>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <speed-display [speed]="character.speed"></speed-display>
-      </div>
-    </div>
-  </div>
-  <div class="character-block-minor">
-    <div class="row">
-      <div class="col-md-4">
-        <languages-display [languages]="character.languages"></languages-display>
-      </div>
-      <div class="col-md-4">
-        <senses-display [senses]="character.senses"></senses-display>
-      </div>
-      <div class="col-md-4">
-        <skills-display [character]="character"></skills-display>
-      </div>
-    </div>
-  </div>
+  <stats-display [character]="character"></stats-display>
   <feature-display-list [features]="character.features"></feature-display-list>
 </div>
