Add clear button.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
     <generator-config [config]="config"></generator-config>
     <div class="row">
       <div class="col-12 text-right">
+        <button type="button" class="btn btn-secondary btn-lg" (click)="onClearClick()">Clear</button>
         <button type="button" class="btn btn-primary btn-lg" (click)="onGenerateClick()">Generate NPC</button>
       </div>
     </div>
