--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,9 @@
 $brand-primary: #bc0f0f;
+$brand-secondary: #ee8600;
+
+$btn-secondary-color:              #fff !default;
+$btn-secondary-bg:                 $brand-secondary !default;
+$btn-secondary-border:             $btn-secondary-bg !default;
 
 $btn-border-radius: 2px;
 $btn-border-radius-sm: 2px;
