--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,4 +21,10 @@
   <ability-score-list [character]="character"></ability-score-list>
   <stats-display [character]="character"></stats-display>
   <feature-display-list [features]="character.features"></feature-display-list>
+  <div class="row mt-2 mb-2">
+    <div class="col-12 text-right">
+      <button type="button" class="btn btn-primary btn-lg" (click)="onExportClick()">Export</button>
+      <export-modal [character]="character" #mdlExport></export-modal>
+    </div>
+  </div>
 </div>
