--- a/src/components/feature-display/feature-display.component.html
+++ b/src/components/feature-display/feature-display.component.html
@@ -1,3 +1,3 @@
 <div class="feature">
-    <h3 class="feature-name">{{feature.name}}.</h3><span class="feature-description">{{feature.description}}</span>
+    <h3 class="feature-name">{{feature.name}}.</h3><span class="feature-description" [innerHTML]="feature.description"></span>
 </div>
