--- a/src/components/header-display/header-display.component.html
+++ b/src/components/header-display/header-display.component.html
@@ -1,6 +1,6 @@
 <div class="npc-header">
     <h1 class="npc-name">
-      John Smith
+      {{character.name}}
       <small class="text-muted">
         {{character.class.name}}<source-reference [reference]="character.class.reference"></source-reference>
         <span *ngIf="character.classArchetype">({{character.classArchetype.name}}<source-reference [reference]="character.classArchetype.reference"></source-reference>)</span>
