--- a/src/components/generator-config/generator-config.component.html
+++ b/src/components/generator-config/generator-config.component.html
@@ -95,7 +95,7 @@
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 form-group">
-    <label for="primaryAbility">Abilities</label>
+    <label for="primaryAbility">Main Abilities</label>
     <select class="form-control" name="primaryAbility" [(ngModel)]="config.primaryAbility">
         <option [ngValue]="null" selected>Any Ability</option>
         <option *ngFor="let ability of abilities" [ngValue]="ability">{{ability.name}}</option>
