Fix production build.

--- a/src/components/generator-config/generator-config.component.html
+++ b/src/components/generator-config/generator-config.component.html
@@ -7,7 +7,7 @@
         <option *ngFor="let race of races" [ngValue]="race">{{race.name}}</option>
       </select>
       <select class="form-control mt-2" name="subrace" [(ngModel)]="config.subrace" [disabled]="!config.race || !config.race.subraces">
-        <option *ngIf="!config.race || config.race.subraces" [ngValue]="null" selected>Any Subrace</option>
+        <option *ngIf="(config.race !== undefined) || (config.race.subraces !== undefined && config.race.subraces.length > 0)" [ngValue]="null" selected>Any Subrace</option>
         <ng-template [ngIf]="config.race != null">
           <option *ngIf="!config.race.subraces" [ngValue]="null" selected>No Subraces</option>
           <option *ngFor="let subrace of (config.race.subraces || [])" [ngValue]="subrace">{{subrace.name}}</option>
@@ -21,7 +21,7 @@
         <option *ngFor="let class of classes" [ngValue]="class">{{class.name}}</option>
     </select>
       <select class="form-control mt-2" name="classArchetype" [(ngModel)]="config.classArchetype" [disabled]="!config.class || !config.class.archetypes">
-        <option *ngIf="!config.class || config.class.archetypes" [ngValue]="null" selected>Any Archetype</option>
+        <option *ngIf="(config.class !== undefined) || (config.class.archetypes !== undefined && config.class.archetypes.length > 0)" [ngValue]="null" selected>Any Archetype</option>
         <ng-template [ngIf]="config.class != null">
           <option *ngIf="!config.class.archetypes" [value]="null" selected>No Archetypes</option>
           <option *ngFor="let archetype of (config.class.archetypes || [])" [ngValue]="archetype">{{archetype.name}}</option>
