Add Segoe UI font.

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,4 +1,9 @@
 @font-face {
     font-family: 'Scala Sans';
-    src: url(../fonts/scala-sans-regular-lf.ttf);
+    src: url(fonts/scala-sans-regular-lf.ttf);
+}
+
+@font-face {
+    font-family: 'Segoe UI';
+    src: url(fonts/segoeui.ttf);
 }
