Simplify styling. Add name refresh button.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
   </div>
 </div>
 <div class="container">
-  <header-display [character]="character"></header-display>
+  <header-display [character]="character" [generator]="generator"></header-display>
   <background-display [character]="character"></background-display>
   <ability-score-list [character]="character"></ability-score-list>
   <stats-display [character]="character"></stats-display>
