--- a/src/components/ability-score-list/ability-score-list.component.html
+++ b/src/components/ability-score-list/ability-score-list.component.html
@@ -1,4 +1,4 @@
-<div class="ability-score-list character-block-major">
+<div class="ability-score-list bt-thick bb-thick">
     <div class="ability-list row">
         <ability-score [ability]="ability" [character]="character" *ngFor="let ability of abilityList"></ability-score>
     </div>
