--- a/src/components/background-display/background-display.component.html
+++ b/src/components/background-display/background-display.component.html
@@ -1,5 +1,5 @@
-  <div class="character-block-first">
-    <h2 class="character-block-title">{{character.background.name}}<source-reference [reference]="character.background.reference"></source-reference></h2>
+  <div class="block bb-thin">
+    <h2 class="block-title">{{character.background.name}}<source-reference [reference]="character.background.reference"></source-reference></h2>
     <div class="feature">
       <h3 class="feature-name">Trait.</h3><span class="feature-description" [innerHTML]="character.personalityTrait"></span>
     </div>
