--- a/src/components/feature-display-list/feature-display-list.component.html
+++ b/src/components/feature-display-list/feature-display-list.component.html
@@ -1,4 +1,4 @@
-<div class="feature-list">
+<div class="feature-list bt-thick">
     <feature-display *ngFor="let feature of features" [feature]="feature">
     </feature-display>
 </div>
