--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,3 +7,5 @@ $fa-font-path: "~font-awesome/fonts";
 
 @import "bootstrap.scss";
 @import "theme.scss";
+@import "blocks.scss";
+@import "features.scss";
