--- a/src/components/header-display/header-display.component.scss
+++ b/src/components/header-display/header-display.component.scss
@@ -2,10 +2,9 @@
 @import "~bootstrap/scss/bootstrap";
 
 .npc-header {
-    @include media-breakpoint-up(sm) {
-        .npc-class {
-            display: inline-block;
-        }
+    
+    .npc-class {
+        font-size: 2.5rem;
     }
 
     .npc-subline {
