--- a/src/components/header-display/header-display.component.html
+++ b/src/components/header-display/header-display.component.html
@@ -1,7 +1,7 @@
 <div class="npc-header">
   <h1 class="npc-name">
+    <div class="refresh pull-right" style="font-size: 24px"><a href="" (click)="onRefreshNameClick($event)"><i class="fa fa-refresh"></i><span class="sr-only">Random Name</span></a></div>
     {{character.name}}
-    <div class="pull-right" style="font-size: 24px"><a href="" (click)="onRefreshNameClick($event)"><i class="fa fa-refresh"></i><span class="sr-only">Random Name</span></a></div>
     <div class="npc-class bt-light bb-thick pb-2">
       <small class="text-muted">
         {{character.class.name}}<source-reference [reference]="character.class.reference"></source-reference>
@@ -10,6 +10,7 @@
     </div>
   </h1>
   <div class="bb-thin pt-2 pb-3">
+    <div class="refresh pull-right"><a href="" (click)="onRefreshPhysicalityClick($event)"><i class="fa fa-refresh"></i><span class="sr-only">Random Physicality</span></a></div>
     <div class="text-muted npc-subline">
       <span class="gender">{{character.genderDescription}}</span>
       <span class="race">{{character.race.name}}</span>
