--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,8 +21,8 @@
 </div>
 <div class="container">
   <header-display [character]="character" [generator]="generator"></header-display>
-  <background-display [character]="character"></background-display>
-  <ability-score-list [character]="character"></ability-score-list>
+  <background-display [character]="character" [generator]="generator"></background-display>
+  <ability-score-list [character]="character" [generator]="generator"></ability-score-list>
   <stats-display [character]="character"></stats-display>
   <feature-display-list [features]="character.features"></feature-display-list>
   <div class="row mt-2 mb-2">
