--- a/src/components/source-reference/source-reference.component.html
+++ b/src/components/source-reference/source-reference.component.html
@@ -14,6 +14,6 @@
     </div>
 </ng-template>
 <ng-template #linkTpl>
-    <i class="fa fa-book" [ngbTooltip]="refContent" triggers="hover"></i>
+    <i class="fa fa-book" [ngbTooltip]="refContent" triggers="hover click:click blur"></i>
     <span class="sr-only">Reference</span>
 </ng-template>
